ini nvbar dah jadi puqi

--- a/ClassicThrottle/includes/navbar.html
+++ b/ClassicThrottle/includes/navbar.html
@@ -1,9 +1,10 @@
-<nav>
+<nav style="background-color: white;">
     <div class="logo">
         <img src="path/to/logo.png" alt="Logo" /> <!-- Replace with actual logo path -->
     </div>
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="showroom.html">Showroom</a></li>
     </ul>
 </nav>
